# fs_base

./: .gitignore  README.md  app.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  sync-to-gitee.yml  sync-to-gitlab.yml  sync.yml
fs_base/: __init__.py  app_ini_util.py  app_init_util.py  app_load.py  app_mini.py  base_util.py  common_util.py  config_manager.py  ini_util.py  message_util.py
fs_base/const/: __init__.py  app_constants.py  fs_constants.py
fs_base/resources/images/: app.icns
src/fs_base/: base_util.py
