[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fs_base"
version = "0.1.0"
description = "一个基础库，基于 PySide6 构建，代码由ChatGPT、DeepSeek提供参考，本人只是搬运工。"
authors = [
    { name = "Simon Xue", email = "xueyao.me@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "PySide6",
    "loguru"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
urls = { Homepage = "https://github.com/flowstone/fs_base" }

[tool.setuptools]
# 包发现配置
packages = { find = { where = ".", include = ["fs_base", "fs_base.*"] } }

# 包数据配置
package-data = { "fs_base" = ["resources/*.qss", "fonts/*.ttf"] }